Fix: Switch Badge from outline to border
Outline can be clipped or hidden if the element is near the edge,
use border to provide a more consistent UI and ensure it is less
likely to be clipped.

--- a/src/design-system/components/Badge/Badge.css
+++ b/src/design-system/components/Badge/Badge.css
@@ -2,7 +2,7 @@
   padding: var(--space-3xs);
   border-radius: 3px;
   font-weight: bold;
-  outline: var(--color-pink) solid 2px;
+  border: var(--color-pink) solid 2px;
   display: inline-block;
   font-size: var(--text--1);
 }
